--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Illyés Gyulai Lakás - Hőmérséklet és Páratartalom</title>
+  <link rel="icon" type="fa/x-icon" href="/favicon/favicon.ico">
+  <link rel="icon" type="image/png" href="/favicon/favicon.png" sizes="32x32">
+  <link rel="apple-touch-icon" href="/icon-192.png">
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
