--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <p id="overall-status" class="status">Checking...</p>
-
+    <p id="plug-status" class="status"></p>
     <div class="more-info">
       <button class="more-btn" onclick="toggleCharts()">
         <i class="fas fa-chart-line"></i> Tovább
