New sensors added to UI

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
   <div class="container">
@@ -25,6 +26,16 @@
     <div class="sensor">
       <i class="fas fa-tint icon"></i>
       <span>Páratartalom: <span id="humidity">Loading...</span></span>
+    </div>
+
+    <div class="sensor">
+      <i class="fas fa-cloud icon"></i>
+      <span>Légszennyezettség: <span id="humidity">Loading...</span></span>
+    </div>
+
+    <div class="sensor">
+      <i class="fas fa-water icon"></i>
+      <span>Vízhőmérséklet: <span id="humidity">Loading...</span></span>
     </div>
 
     <p id="overall-status" class="status">Checking...</p>
