New sensor added for UI

--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
 
     <div class="sensor">
       <i class="fas fa-cloud icon"></i>
-      <span>Légszennyezettség: <span id="humidity">Loading...</span></span>
+      <span>Légszennyezettség: <span id="air">Loading...</span></span>
     </div>
 
     <div class="sensor">
       <i class="fas fa-water icon"></i>
-      <span>Vízhőmérséklet: <span id="humidity">Loading...</span></span>
+      <span>Vízhőmérséklet: <span id="water">Loading...</span></span>
+    </div>
+
+    <div class="sensor">
+      <i class="fas fa-door-closed icon"></i>
+      <span>Ajtó: <span id="door">Zárva</span></span>
     </div>
 
     <p id="overall-status" class="status">Checking...</p>
